--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -421,8 +421,9 @@ mark,
     content: "\2014\00A0"; }
 
 .img-fluid {
-  max-width: 100%;
-  height: auto; }
+ height:600px;
+  width:400px;
+}
 
 .img-thumbnail {
   padding: 0.25rem;
