--- a/assets/css/style-starter.css
+++ b/assets/css/style-starter.css
@@ -5072,6 +5072,36 @@ button.bg-dark:focus {
     height: 100%;
     border: 0; }
 
+/* video 1 and 2 after movie and other  */
+.video{
+  background-color: #000;
+  color: #fff;
+  border-radius: 50% 20%;
+  width: 389px;
+  height: 389px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-left: 30px;
+}
+.video1{
+  background-color: #000;
+  color: #fff;
+  border-radius: 50% 20%;
+  width: 389px;
+  height: 389px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  margin-left: 30px;
+}
+.video video{
+  transform: rotate(-90deg);
+
+}
+
 .embed-responsive-21by9::before {
   padding-top: 42.85714%; }
 
