--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,6 +33,7 @@ body {
   .gallery-wrapper {
     display: flex;
     width: 100%;
+       height: 100%;
     transition: transform 0.5s ease-in-out;
   }
   
