--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,29 @@ body {
     padding: 0;
     background-color: #f9f9f9;
   }
+   /* pioneer */
+  .glowing-text {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #000000;
+    text-shadow: 0 0 5px rgb(0, 255, 149), 0 0 10px rgb(0, 255, 200), 0 0 15px rgb(0, 255, 149);
+    animation: glow 1.5s infinite alternate;
+}
+
+@keyframes glow {
+    from {
+        text-shadow: 0 0 15px rgb(255, 4, 0), 0 0 10px rgb(255, 81, 0), 0 0 15px rgba(255, 13, 0, 0.914);
+    }
+    to {
+        text-shadow: 0 0 10px rgb(0, 255, 238), 0 0 20px rgb(0, 229, 255), 0 0 30px rgb(0, 229, 255);
+    }
+}
+.fancy-shadow {
+  font-family: 'Lobster', cursive;
+  font-size: 3rem;
+  color: #000000;
+  text-shadow: 2px 2px 10px rgba(255, 69, 0, 0.7);
+}
   
   /* Banner Section */
   .w3l-banner1 {
