--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,6 +197,7 @@ body {
   @media (max-width: 480px) {
     .gallery-container {
       max-width: 100%;
+        height:400px;
     }
   
     .gallery-image {
